Change the way lsp-zero config is loaded

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# neovim optimizations
+set-option -sg escape-time 10
+set-option -g focus-events on
+
 # Best Pane Spliting key bindings
 bind | split-window -h
 bind - split-window -v
@@ -10,7 +14,7 @@ unbind '"'
 unbind %
 
 # Easy config reloads
-bind C-r source ~/.config/tmux/tmux.conf
+bind C-t source ~/.config/tmux/tmux.conf
 
 # Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
