--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,6 +31,10 @@ set-option -g allow-rename off
 # status bar
 set -g status-position top
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # List of plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "nordtheme/tmux"
