--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,8 +8,8 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 
 # Best Pane Spliting key bindings
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
