⚙️ Adds support for Vue, graphql, sql lsp
There are also updates related to package updates, new words added to
spell check dictionary.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,10 @@ bind C-a send-prefix
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# image support
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Best Pane Spliting key bindings
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
