👻 Configuration for ghostty
- Changes tmux theme to catppuccin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,7 @@ unbind '"'
 unbind %
 
 # Easy config reloads
-bind C-t source ~/.config/tmux/tmux.conf
+# bind C-t source ~/.config/tmux/tmux.conf
 
 # Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -41,7 +41,13 @@ setw -g pane-base-index 1
 
 # List of plugins
 set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "nordtheme/tmux"
+# THEMES
+# set -g @plugin "nordtheme/tmux"
+set -g @plugin "mike-rambil/tmux-catppuccin"
+
+# CATPPUCCIN Config
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
