--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,7 @@
 [user]
   useConfigOnly = true
+	name = Maks Yadvinskyy
+	email = maks@revent.studio
 [init]
   defaultBranch = main
 [filter "lfs"]
@@ -23,6 +25,7 @@
 [core]
   editor = nvim
   pager = delta
+	excludesfile = ~/.gitignore_global
 
 [interactive]
   diffFilter = delta --color-only
