--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,7 +33,7 @@ set -g mouse on
 set-option -g allow-rename off
 
 # status bar
-set -g status-position top
+set -g status-position bottom
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -41,30 +41,25 @@ setw -g pane-base-index 1
 
 # List of plugins
 set -g @plugin "tmux-plugins/tpm"
+
 # THEMES
-# set -g @plugin "nordtheme/tmux"
-# set -g @plugin "mike-rambil/tmux-catppuccin"
 set -g @plugin 'rose-pine/tmux'
 
-# CATPPUCCIN Config
-# set -g @catppuccin_flavor 'mocha'
-# set -g @catppuccin_window_status_style "rounded"
-
 # RosePine Config
-set -g @rose_pine_variant 'moon'
-set -g @rose_pine_host 'on' # Enables hostname in the status bar
+set -g @rose_pine_variant 'main'
+set -g @rose_pine_host 'off' # Enables hostname in the status bar
 set -g @rose_pine_hostname_short 'on' # Makes the hostname shorter by using tmux's '#h' format
-set -g @rose_pine_date_time '' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_date_time '%a - %H:%M %m.%d.%y' # It accepts the date UNIX command format (man date for info)
 set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
 set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
-set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+set -g @rose_pine_bar_bg_disable 'off' # Disables background color, for transparent terminal emulators
 # If @rose_pine_bar_bg_disable is set to 'on', uses the provided value to set the background color
 # It can be any of the on tmux (named colors, 256-color set, `default` or hex colors)
 # See more on http://man.openbsd.org/OpenBSD-current/man1/tmux.1#STYLES
 set -g @rose_pine_bar_bg_disabled_color_option 'default'
 
 # set -g @rose_pine_only_windows 'on' # Leaves only the window module, for max focus and space
-# set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
 
 # set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
 set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
@@ -72,9 +67,9 @@ set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current dir
 # Previously set -g @rose_pine_window_tabs_enabled
 
 # Example values for these can be:
-set -g @rose_pine_left_separator '  ' # The strings to use as separators are 1-space padded
-set -g @rose_pine_right_separator '  ' # Accepts both normal chars & nerdfont icons
-set -g @rose_pine_field_separator '  ' # Again, 1-space padding, it updates with prefix + I
+set -g @rose_pine_left_separator '  ' # The strings to use as separators are 1-space padded
+set -g @rose_pine_right_separator '  ' # Accepts both normal chars & nerdfont icons
+set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
 set -g @rose_pine_window_separator '  ' # Replaces the default `:` between the window number and name
 
 # These are not padded
@@ -84,7 +79,7 @@ set -g @rose_pine_folder_icon '' # Changes the default icon to the left of th
 set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
 set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
 set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-set -g @rose_pine_window_status_separator "  " # Changes the default icon that appears between window names
+set -g @rose_pine_window_status_separator "  " # Changes the default icon that appears between window names
 
 # Very beta and specific opt-in settings, tested on v3.2a, look at issue #10
 # set -g @rose_pine_prioritize_windows 'on' # Disables the right side functionality in a certain window count / terminal width
